<resources>
    <string name="app_name">TJSS</string>
    <string name="sign_in">Sign in</string>
    <string name="sign_up">Sign up</string>
    <string name="phone_number">Phone Number</string>
    <string name="enter_your_phone_number">Enter your phone number</string>
    <string name="phone_or_email">Phone/email</string>
    <string name="next">Next</string>
    <string name="back">Back</string>
    <string name="create_a_password">Create a password</string>
    <string name="must_be_six_characters_or_more">Must be 6 characters or more</string>
    <string name="enter_your_email_address">Enter your email address</string>
    <string name="add_your_email_to_make_sure_you_can_recover_your_password">Add your email to make sure you can recover your password if forget it</string>
    <string name="this_is_how_you_will_appear_on_your_map">This is how you will appear on your map</string>
    <string name="enter_your_name">Enter your name</string>
    <string name="add_photo">Add photo</string>
    <string name="i_want_to_create_a_circle">I want to create a Circle</string>
    <string name="enter_your_invite_code">Enter your invite code</string>
    <string name="ask_the_circle_creator_for_the_code">Ask the circle creator for their code</string>
    <string name="sign_in_with_email">Sign in with email</string>
    <string name="password">Password</string>
    <string name="enter_your_password">Enter your password</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="submit">Submit</string>
    <string name="selected_plan">Selected plan</string>
    <string name="basic_plan">Basic plan</string>
    <string name="free">FREE</string>
    <string name="lorem_ipsum_is_simply_dummy_text_of_the_printing_and_typesetting_industry">Lorem Ipsum is simply dummy text of the printing and typesetting industry.</string>
    <string name="silver_plan">Silver Plan</string>
    <string name="_250">250$</string>
    <string name="gold_plan">Gold Plan</string>
    <string name="_350">350$</string>
    <string name="platinum_plan">Platinum Plan</string>
    <string name="_500">500$</string>
    <string name="safety_circles">Safety Circles</string>
    <string name="favorite_places">Favorite Places</string>
    <string name="incidents">Incidents</string>
    <string name="newApiKey">AIzaSyD4yelhNGH4UjO8nFT91SLY0u0Bi3s-TSI</string>
    <string name="google_places_key">AIzaSyD4yelhNGH4UjO8nFT91SLY0u0Bi3s-TSI</string>
    <string name="loerm_ipsum_is_simply">Loerm Ipsum is Simply</string>
    <string name="address_number">Address number</string>
    <string name="safety_circle_name">Safety Circle name</string>
    <string name="enter_name_of_your_safety_circle">Enter name of your Safety Circle</string>
    <string name="primary_circle">Primary Circle</string>
    <string name="primary_circle_represents_your_circle_which_will_be_notified_automatically_if_any_emergency_arises_this_options_is_limited_by_plan_settings">Primary Circle represents your circle which will be notified automatically if any emergency arises. This options is limited by plan settings</string>
    <string name="suggested_safety_circle_names">Suggested Safety Circle names</string>
    <string name="friends">Friends</string>
    <string name="colleagues">Colleagues</string>
    <string name="gym_buddies">Gym Buddies</string>
    <string name="siblings">Siblings</string>
    <string name="family">Family</string>
    <string name="special_persons">Special Persons</string>
    <string name="done">Done</string>
    <string name="mark_john">Mark John</string>
    <string name="my_safety_circles">MY SAFETY CIRCLES</string>
    <string name="safety_circle">Safety Circle</string>
    <string name="primary">PRIMARY</string>
    <string name="safety_circle_1">safety Circle 1</string>
    <string name="create_circle">Create Circle</string>
    <string name="join_a_circle">Join a circle</string>
    <string name="messages">Messages</string>
    <string name="help_alert">Help Alert</string>
    <string name="plans">Plans</string>
    <string name="location_sharing">Location Sharing</string>
    <string name="basic">Basic</string>
    <string name="other">OTHER</string>
    <string name="settings">Settings</string>
    <string name="faqs">FAQs</string>
    <string name="drawer_close">Drawer Close</string>
    <string name="drawer_open">Drawer Open</string>
    <string name="change">CHANGE</string>
    <string name="my_account">My Account</string>
    <string name="delete_account">Delete Account</string>
    <string name="john">John</string>
    <string name="first_name">FIRST NAME</string>
    <string name="last_name">LAST NAME</string>
    <string name="email">EMAIL</string>
    <string name="mobile">MOBILE</string>
    <string name="header_image_of_favorite_places">Header image of favorite places</string>
    <string name="view_or_add_new_favorite_place">Save your favourite places and get notifications when circle members arrive and leave</string>
    <string name="add_favorite_place">Add Favorite Place</string>
    <string name="your_favorite_places">Your Favorite Places</string>
    <string name="favorite_place_name">Favorite Place Name</string>
    <string name="must_be_6_characters_or_more">Must be 6 characters or more</string>
    <string name="your_default_address">Your Default Address</string>
    <string name="address">Address</string>
    <string name="first_and_last_name">First and Last Name</string>
    <string name="enter_first_and_last_name_of_new_contact">Enter first and last name of new contact</string>
    <string name="enter_number_of_new_contact">Enter number of new contact</string>
    <string name="create">Create</string>
    <string name="enter_number">Enter number</string>
    <string name="add_new_contact">New Contact</string>
    <string name="_new">New</string>
    <string name="choose_contact">Existing</string>
    <string name="sorry">Sorry!</string>
    <string name="you_will_need_to_add_at_least_one_n_member_to_your_circle_to_be_able_to_chat">You will need to add at least one   member to your circle to be able to chat</string>
    <string name="invite_new_member">Invite New Member</string>
    <string name="group_chat">Group Chat</string>
    <string name="friend_chat">Friend Chat</string>
    <string name="subscription_plan">Subscription Plan</string>
    <string name="you_have_selected_silver_plan">You have selected Silver Plan</string>
    <string name="name">Name</string>
    <string name="name_example_jane_doe">Name example - Jane Doe</string>
    <string name="card">Card</string>
    <string name="your_card_number_is_incomplete">Your card number is incomplete</string>
    <string name="card_number_example_4242_4242_4242_4242">Card number example - 4242 4242 4242 4242</string>
    <string name="phone_example_123_46_7890">Phone</string>
    <string name="buy_a_plan">Buy a Plan</string>
    <string name="plan_that_you_selected_needs_to_be_purchased_ndou_you_want_to_continue">Plan that you selected needs to be purchased. Dou you want to continue?</string>
    <string name="_continue">Continue</string>
    <string name="silver">SILVER</string>
    <string name="more_information">More information</string>
    <string name="_250_">250 $</string>
    <string name="why_do_we_use_it">Why do we use it?</string>
    <string name="it_is_a">It is a long established fact that a reader will be distracted by the readable</string>
    <string name="where_does_it_come_from">Where does it come from</string>
    <string name="where_can_i_get_some">Where can I get Some?</string>
    <string name="terms_of_service">Terms of Service</string>
    <string name="my_location_sharing">My Location Sharing</string>
    <string name="you_are_sharing_your_location_with_this_safety_circle">You are sharing your location with the Safety Circle</string>
    <string name="location_of_people_in_this_circle">Location of People in this Circle</string>
    <string name="log_out">Log Out</string>
    <string name="safety_circle_options">Safety Circle Options</string>
    <string name="map_options">Map Options</string>
    <string name="alert_options">Alert Options</string>
    <string name="account">Account</string>
    <string name="change_password">Change password</string>
    <string name="location_updates">Location Updates</string>
    <string name="current_password">Current Password</string>
    <string name="forgot_password_">Forgot Password?</string>
    <string name="new_password">New Password</string>
    <string name="show_password">Show password</string>
    <string name="save">Save</string>
    <string name="this_will_delete_your_entire_account">This will delete your entire account\n and remove you from all\n Circles of TJSS App</string>
    <string name="yes_continue">Yes, Continue</string>
    <string name="update_at_least_every">Update at least every:</string>
    <string name="your_location_will_also_update_automatically_when_you_change_locations">Your location will also update automatically when you change locations</string>
    <string name="view_alert_options_for">VIEW ALERT OPTIONS FOR:</string>
    <string name="general_alerts">GENERAL ALERTS:</string>
    <string name="crime_in_my_area">Crime in my area</string>
    <string name="alert_sound">Alert Sound</string>
    <string name="send_me_alerts_for_this_circle_using">SEND ME ALERTS FOR THIS CIRCLE USING:</string>
    <string name="email_">Email</string>
    <string name="app_notifications">App Notifications</string>
    <string name="sms">Sms</string>
    <string name="local_services">LOCAL SERVICES:</string>
    <string name="hospitals">Hospitals</string>
    <string name="fire_stations">Fire Stations</string>
    <string name="police_stations">Police Stations</string>
    <string name="crime_and_offenders">CRIME AND OFFENDERS</string>
    <string name="crime">Crime</string>
    <string name="safety_circle_members">SAFETY CIRCLE MEMBERS</string>
    <string name="leave_this_safety_circle">Leave this Safety Circle</string>
    <string name="this_will_not_delete_the_circle_for_other_members">This will not delete the circle for other members.</string>
    <string name="change_a_picture">Change a picture</string>
    <string name="edit_name_of_your_safety_circle">Edit name of your safety circle</string>
    <string name="_7_day_trial">(7 day trial)</string>
    <string name="view_more">View more</string>
    <string name="near_by_path">https://maps.googleapis.com/maps/api/place/nearbysearch/json?</string>
    <string name="base_url">https://tjssapi.cyboticx.com/</string>
    <string name="image_base_url">https://tjssapi.cyboticx.com/storage/app/profileimage/</string>
    <string name="isd_codes_url">isdcodes</string>
    <string name="plans_list">plans</string>
    <string name="plan_details">plandetails</string>
    <string name="join_using_circle_invitation_code">signupbyinvitecode</string>
    <string name="verify_circle_code">verifyinvitecode</string>
    <string name="user_fav_places">userfavoriteplaces</string>
    <string name="login_path">login</string>
    <string name="user_s_safety_circle_link_path">usersafetycircles</string>
    <string name="user_profile_path">profile</string>
    <string name="create_circle_path">createcircle</string>
    <string name="join_circle_by_invite_code_after_login_path">joinByInviteCode</string>
    <string name="card_number">Card Number</string>
    <string name="mm_yy">MM/YY</string>
    <string name="card_expiry_example_12_20">Card expiry example 12/20</string>
    <string name="cvv_example_123">CVV example 123</string>
    <string name="cvv">CVV</string>
    <string name="safety_tips_options">Safety Tips Options</string>
    <string name="service_providers">Service Providers</string>
    <string name="medical_records">Medical Records</string>
    <string name="please_enter_your_registered_email_address">Please enter your registered email address</string>
</resources>