<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="@dimen/activity_default_margin">

    <android.support.v7.widget.AppCompatTextView
        style="@style/Base.DialogWindowTitle.AppCompat"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/half_margin"
        android:layout_marginLeft="@dimen/activity_default_margin"
        android:text="@string/forgot_password"/>


    <android.support.v7.widget.AppCompatTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="@dimen/half_margin"
        android:gravity="center"
        android:text="@string/please_enter_your_registered_email_address"/>


    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/half_margin"
        android:layout_marginLeft="@dimen/activity_default_margin"
        android:layout_marginRight="@dimen/activity_default_margin"
        android:layout_marginTop="@dimen/half_margin"
        android:hint="@string/email_">


        <android.support.design.widget.TextInputEditText
            android:id="@+id/txtSignInPhone"
            style="@style/TextAppearance.AppCompat.Body1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/text_box_bg"
            android:inputType="textEmailAddress"/>


    </android.support.design.widget.TextInputLayout>


    <android.support.v7.widget.AppCompatButton
        android:id="@+id/btnSubmit"
        style="@style/tjss_button_style"
        android:text="@string/submit"/>


</LinearLayout>